--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
           <a href="#presentacion">Presentación</a>
           <a target="_blank" href="https://www.youtube.com/watch?v=ziuls9D69bU&list=PLAnA8FVrBl8BiQd_Fg-Jr32P_v9F8vG-2">&#9658;</a>
         </li>
+        <li>
+          <a href="#capitulo-1">Capítulo 1</a>
+          <a target="_blank" href="https://www.youtube.com/watch?v=8K1wPl4SX1Q&list=PLAnA8FVrBl8BiQd_Fg-Jr32P_v9F8vG-2">&#9658;</a>
+        </li>
       </ul>
       <div class="fold-buttons">
         <div id="unfoldAllBtn">
@@ -45,6 +49,25 @@
     <div class="grupo-formulas">
       <span class="no-formula">
         No hay fórmulas
+      </span>
+    </div>
+  </div>
+
+  <h2 id="capitulo-1"><a href="#capitulo-1" class="formulas-title">Capítulo 1: Polinomio de Taylor</a></h2>
+  <div class="capitulo-1 formulas">
+    <div class="grupo-formulas">
+      <span class="formula-titulo">
+        (1.1) Polinomio de Taylor (1D)
+      </span>
+      <span class="formula">
+        f \left( x \right) \simeq f \left( x_0 \right) 
+          + f' \left( x_0 \right) \left( x - x_0 \right)
+          + \frac{1}{2!} f'' \left( x_0 \right) \left( x - x_0 \right)^2
+          + \frac{1}{3!} f''' \left( x_0 \right) \left( x - x_0 \right)^3
+          + ...
+      </span>
+      <span class="formula">
+        x \simeq x_0
       </span>
     </div>
   </div>
