--- a/index.html
+++ b/index.html
@@ -3,78 +3,33 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-
-  <title>[Fórmulas] Curso de Teoría de Campos de Javier García</title>
-  <meta name="description" content="Repositorio de fórmulas para el Curso de Teoría de Campos de Javier García">
+  <title>Este no es el formulario que estás buscando (pero casi)</title>
+  <meta name="description" content="Antiguo Repositorio de fórmulas para el Curso de Teoría Cuántica de Campos de Javier García">
   <meta name="author" content="Raúl J. Vila">
   <link rel="icon" type="image/png" href="favicon.png" />
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0-beta1/katex.min.css" integrity="sha384-VEnyslhHLHiYPca9KFkBB3CMeslnM9CzwjxsEbZTeA21JBm7tdLwKoZmCt3cZTYD" crossorigin="anonymous" />
-  <link rel="stylesheet" href="style.css?v=20190121" />
+  <link rel="stylesheet" href="style.css?v=20190204" />
 </head>
-
 <body>
-  <h1 id="top">
-    Repositorio de fórmulas para
-    el <a target="_blank" href="https://www.youtube.com/playlist?list=PLAnA8FVrBl8BiQd_Fg-Jr32P_v9F8vG-2">Curso de Teoría de Campos</a>
-    de <a target="_blank" href="https://www.youtube.com/user/jamesjamesbondbond">Javier García</a>
-  </h1>
-  <h3><a href="https://github.com/Crul/CursoTeoriaDeCamposJavierGarcia">Repositorio en GitHub</a></h3>
+  <div>
+    El formulario de Curso de Teoría Cuántica de Campos de Javier García se ha movido a otra dirección.
 
-  <div id="topContent">
-    <div id="menu">
-      <ul>
-        <li>
-          <a href="#presentacion">Presentación</a>
-          <a target="_blank" href="https://www.youtube.com/watch?v=ziuls9D69bU&list=PLAnA8FVrBl8BiQd_Fg-Jr32P_v9F8vG-2">&#9658;</a>
-        </li>
-        <li>
-          <a href="#capitulo-1">Capítulo 1</a>
-          <a target="_blank" href="https://www.youtube.com/watch?v=8K1wPl4SX1Q&list=PLAnA8FVrBl8BiQd_Fg-Jr32P_v9F8vG-2">&#9658;</a>
-        </li>
-      </ul>
-      <div class="fold-buttons">
-        <div id="unfoldAllBtn">
-          &#128449; Abrir todos
-        </div>
-        <div id="foldAllBtn">
-          &#128448; Cerrar todos
-        </div>
+    <div id="scriptMsg">
+      Estamos intentando redirigirte al formulario correctio. Si en unos segundos no ha funcionado, pulsa aquí:<br/>
+        <a href="https://crul.github.io/CursoTeoriaCuanticaDeCamposJavierGarcia">https://crul.github.io/CursoTeoriaCuanticaDeCamposJavierGarcia</a>
+    </div>
+
+    <noscript>
+      <div id="noscriptMsg">
+        Vaya, tienes JavaScript desactivado, así que no podemos redirigirte automáticamente. Trendrás que pulsar aquí:<br/>
+        <a href="https://crul.github.io/CursoTeoriaCuanticaDeCamposJavierGarcia">https://crul.github.io/CursoTeoriaCuanticaDeCamposJavierGarcia</a>
       </div>
-    </div>
+    </noscript>
+
+    <script type="text/javascript">
+      document.getElementById('scriptMsg').style.display = 'block';
+      document.location.href = 'https://crul.github.io/CursoTeoriaCuanticaDeCamposJavierGarcia';
+    </script>
+
   </div>
-
-  <h2 id="presentacion"><a href="#presentacion" class="formulas-title">Presentación</a></h2>
-  <div class="presentacion formulas">
-    <div class="grupo-formulas">
-      <span class="no-formula">
-        No hay fórmulas
-      </span>
-    </div>
-  </div>
-
-  <h2 id="capitulo-1"><a href="#capitulo-1" class="formulas-title">Capítulo 1: Polinomio de Taylor</a></h2>
-  <div class="capitulo-1 formulas">
-    <div class="grupo-formulas">
-      <span class="formula-titulo">
-        (1.1) Polinomio de Taylor (1D)
-      </span>
-      <span class="formula">
-        f \left( x \right) \simeq f \left( x_0 \right) 
-          + f' \left( x_0 \right) \left( x - x_0 \right)
-          + \frac{1}{2!} f'' \left( x_0 \right) \left( x - x_0 \right)^2
-          + \frac{1}{3!} f''' \left( x_0 \right) \left( x - x_0 \right)^3
-          + ...
-      </span>
-      <span class="formula">
-        x \simeq x_0
-      </span>
-    </div>
-  </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0-beta1/katex.min.js" integrity="sha384-O4hpKqcplNCe+jLuBVEXC10Rn1QEqAmX98lKAIFBEDxZI0a+6Z2w2n8AEtQbR4CD" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script type="text/javascript" src="script.js?v=20190121"></script>
-
 </body>
 </html>
